[vul] CWE-352: Cross-Site Request Forgery (CSRF) 템플릿 CSRF 토큰 추가, CSRFProtect 초기화

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,7 @@
 <h2>프로필 관리</h2>
 <p>사용자명: {{ user.username }}</p>
 <form method="post">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   소개글: <br>
   <textarea name="bio" rows="4" cols="50">{{ user.bio or '' }}</textarea><br>
   <button type="submit">프로필 업데이트</button>
